--- a/CodeUp/6081-6084.ipynb
+++ b/CodeUp/6081-6084.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6081: [기초-종합] 소리 파일 저장용량 계산하기\r\n",
     "https://codeup.kr/problem.php?id=6081\r\n",
@@ -33,46 +32,48 @@
     "출력\r\n",
     "입력된 16진수에 1~F까지 순서대로 곱한, 16진수 구구단을 줄을 바꿔 출력한다.\r\n",
     "계산 결과도 16진수로 출력해야 한다.\r\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5*1=5\n",
-      "5*2=a\n",
-      "5*3=f\n",
-      "5*4=14\n",
-      "5*5=19\n",
-      "5*6=1e\n",
-      "5*7=23\n",
-      "5*8=28\n",
-      "5*9=2d\n",
-      "5*10=32\n",
-      "5*11=37\n",
-      "5*12=3c\n",
-      "5*13=41\n",
-      "5*14=46\n",
-      "5*15=4b\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
    "source": [
+    "# Time Complextity: O(n)\r\n",
+    "\r\n",
     "a = '5'\r\n",
     "hexNum = int(a, 16)\r\n",
     "for i in range(1, 16):\r\n",
-    "    # print(\"%X*%X=%X\"%(hexNum, i, hexNum*i))\r\n",
-    "    print(f'{hexNum}*{i}=%x' %(hexNum*i))"
-   ]
+    "    # print(\"%X*%X=%X\"%(hexNum, i, hexNum*i))    # not using f-string\r\n",
+    "    print(f'{hexNum}*{i}=%X' %(hexNum*i))   # using f-string"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5*1=5\n",
+      "5*2=A\n",
+      "5*3=F\n",
+      "5*4=14\n",
+      "5*5=19\n",
+      "5*6=1E\n",
+      "5*7=23\n",
+      "5*8=28\n",
+      "5*9=2D\n",
+      "5*10=32\n",
+      "5*11=37\n",
+      "5*12=3C\n",
+      "5*13=41\n",
+      "5*14=46\n",
+      "5*15=4B\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6082 [기초-종합] 3 6 9 게임의 왕이 되자\r\n",
     "https://codeup.kr/problem.php?id=6082\r\n",
@@ -101,33 +102,35 @@
     "출력\r\n",
     "1 부터 그 수까지 순서대로 공백을 두고 수를 출력하는데,\r\n",
     "3 또는 6 또는 9가 포함 되어있는 수인 경우, 그 수 대신 영문 대문자 X 를 출력한다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 X 4 5 X 7 8 X "
-     ]
-    }
-   ],
    "source": [
+    "# Time Complextity: O(n)\r\n",
+    "\r\n",
     "a=9\r\n",
     "for i in range(1,a+1):\r\n",
     "    if (i%10==3 or i%10==6 or i%10==9):\r\n",
     "        print('X',end=' ')\r\n",
     "        continue\r\n",
     "    print(i,end=' ')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 2 X 4 5 X 7 8 X "
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6083 : [기초-종합] 빛 섞어 색 만들기\r\n",
     "https://codeup.kr/problem.php?id=6083\r\n",
@@ -149,16 +152,28 @@
     "출력\r\n",
     "만들 수 있는 rgb 색의 정보를 오름차순(계단을 올라가는 순, 12345... abcde..., 가나다라마...)으로\r\n",
     "줄을 바꿔 모두 출력하고, 마지막에 그 개수를 출력한다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "source": [
+    "# Time Complextity: O(n*m*l)\r\n",
+    "\r\n",
+    "r, g, b = map(int, [2, 2, 2])\r\n",
+    "answer = 0\r\n",
+    "for i in range(r):\r\n",
+    "  for j in range(g):\r\n",
+    "    for k in range(b):\r\n",
+    "      print(f'{i} {j} {k}')\r\n",
+    "      answer+=1\r\n",
+    "print(answer)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "0 0 0\n",
       "0 0 1\n",
@@ -172,20 +187,10 @@
      ]
     }
    ],
-   "source": [
-    "r, g, b = map(int, [2, 2, 2])\r\n",
-    "answer = 0\r\n",
-    "for i in range(r):\r\n",
-    "  for j in range(g):\r\n",
-    "    for k in range(b):\r\n",
-    "      print(f'{i} {j} {k}')\r\n",
-    "      answer+=1\r\n",
-    "print(answer)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6084: [기초-종합] 소리 파일 저장용량 계산하기\r\n",
     "https://codeup.kr/problem.php?id=6084\r\n",
@@ -236,25 +241,31 @@
     "출력\r\n",
     "필요한 저장 공간을 MB 단위로 바꾸어 출력한다.\r\n",
     "단, 소수점 첫째 자리까지의 정확도로 출력하고 MB를 공백을 두고 출력한다.\r\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "source": [
+    "# Time Complextity: O(n*m*l)\r\n",
+    "def calFileSize():\r\n",
+    "    h, b, c, s = map(int, [44100, 16, 2, 10])\r\n",
+    "\r\n",
+    "    if h > 48000 or b > 32 or  c > 5 or s > 6000:\r\n",
+    "        return\r\n",
+    "    print(f'%.1f MB' %(h*b*c*s/8/1024/1024))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "1.7 MB\n"
      ]
     }
    ],
-   "source": [
-    "h, b, c, s = map(int, [44100, 16, 2, 10])\r\n",
-    "print(f'%.1f MB' %(h*b*c*s/8/1024/1024))"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
